fixed list styling on mobile

--- a/css/list.scss
+++ b/css/list.scss
@@ -5,16 +5,6 @@
 
 body.list main {
 
-  header {
-    padding: $unit $body-padding-horizontal;
-
-    h1.title {
-      @include title();
-      display: inline-block;
-    }
-
-  }
-
   .contents .list {
     background-color: $body-background;
     
@@ -24,11 +14,12 @@ body.list main {
     list-style-type: none;
     
     @include lt-small() {
+      border-top-width: 0;
       border-left-width: 0;
       border-right-width: 0;
       border-radius: 0;
-      padding-left: $body-padding-horizontal-small;
-      padding-right: $body-padding-horizontal-small;
+      padding-left: 0;
+      padding-right: 0;
     }
     
     li {
